14223
`Stream.fill[A](elem: => A): Stream[A]` is unusable as it clashes with `Stream.fill[A](n: Int)(elem: => A): Stream[A]`

Example:

{code}
scala> Stream.fill(4)
<console>:5: error: missing arguments for method fill in object Stream;
follow this method with `_' if you want to treat it as a partially applied function
       Stream.fill(4)
              ^
{code}

Suggestion: remove the first version (which was introduced in 2.8) and un-deprecate Stream.const (which has been around since at least 2.7.x).
